--- a/games/tic-tac-toe-online.ejs
+++ b/games/tic-tac-toe-online.ejs
@@ -111,356 +111,143 @@
         </div>
     </div>
     <script>
+        let box1;
         function playWithBot() {
             document.getElementById("container").innerHTML = `
             <div class="gameBoard">
-            <h1>Tic Tac Toe</h1>
-            <div class="row">
-                <button id="box1-0" class="boardBox" onclick="clik1(0)"></button>
-                <button id="box1-1" class="boardBox" onclick="clik1(1)"></button>
-                <button id="box1-2" class="boardBox" onclick="clik1(2)"></button>
-            </div>
-            <div class="row">
-                <button id="box1-3" class="boardBox" onclick="clik1(3)"></button>
-                <button id="box1-4" class="boardBox" onclick="clik1(4)"></button>
-                <button id="box1-5" class="boardBox" onclick="clik1(5)"></button>
-            </div>
-            <div class="row">
-                <button id="box1-6" class="boardBox" onclick="clik1(6)"></button>
-                <button id="box1-7" class="boardBox" onclick="clik1(7)"></button>
-                <button id="box1-8" class="boardBox" onclick="clik1(8)"></button>
-            </div>
-        </div>`
+                <h1>Tic Tac Toe</h1>
+                <div class="row">
+                    <button id="box1-0" class="boardBox"></button>
+                    <button id="box1-1" class="boardBox"></button>
+                    <button id="box1-2" class="boardBox"></button>
+                </div>
+                <div class="row">
+                    <button id="box1-3" class="boardBox"></button>
+                    <button id="box1-4" class="boardBox"></button>
+                    <button id="box1-5" class="boardBox"></button>
+                </div>
+                <div class="row">
+                    <button id="box1-6" class="boardBox"></button>
+                    <button id="box1-7" class="boardBox"></button>
+                    <button id="box1-8" class="boardBox"></button>
+                </div>
+            </div>`
+            const script = document.createElement("script");
+            script.src = "../frontend/tictactoebot.js";
+            document.body.appendChild(script);
         }
     </script>
-    <script>
-        a = document.getElementById("box1-0");
-        b = document.getElementById("box1-1");
-        c = document.getElementById("box1-2");
-        d = document.getElementById("box1-3");
-        e = document.getElementById("box1-4");
-        f = document.getElementById("box1-5");
-        g = document.getElementById("box1-6");
-        h = document.getElementById("box1-7");
-        i = document.getElementById("box1-8");
-        let box1 = [a, b, c, d, e, f, g, h, i];
-
-        tr = document.querySelector("#retry");
-        let req = true;
-        pstat = document.getElementById("pstat");
-        bstat = document.getElementById("bstat");
-        pWin = false;
-        bWin = false;
-        pStat = 0;
-        bStat = 0;
-        console.log(box1);
-        let msg = document.querySelector("#displayMessage");
-
-        console.log(msg);
-
-        function clik1(x) {
-            if (pWin == false && bWin == false) {
-                console.log("inside clik()"+box1[x].innerText);
-                if (box1[x].innerText == "") {
-                    console.log("inside if");
-                    box1[x].innerText = "X";
-                    checkWin();
-                    if (pWin == false && bWin == false) {
-                        setTimeout(function () {
-                            botValue();
-                        }, 150);
-                    }
-                }
-            }
-        }
-
-        function botValue() {
-            console.log("inside botValue()");
-            req = true;
-            mainValue();
-            checkWin();
-        }
-
-        function mcheckWin(x, y, z) {
-            if (box1[x].innerText == "X" && box1[y].innerText == "X" && box1[z].innerText == "X") {
-                //checks left to right diag line for player
-                console.log("You WIN");
-                pWin = true;
-                msg.textContent = "You Win ";
-                msg.style.color = "blue";
-                pStat++;
-                pstat.textContent = pStat;
-                retry();
-            } else if (
-                box1[x].innerText == "O" &&
-                box1[y].innerText == "O" &&
-                box1[z].innerText == "O"
-            ) {
-                //checks left to right diag line for bot
-                bWin = true;
-                bStat++;
-                bstat.textContent = bStat;
-                msg.textContent = "You lose";
-                msg.style.color = "Red";
-
-                retry();
-            }
-        }
-
-        function checkWin() {
-            mcheckWin(0, 4, 8);
-            mcheckWin(1, 4, 7);
-            mcheckWin(0, 1, 2);
-            mcheckWin(2, 4, 6);
-            mcheckWin(2, 5, 8);
-            mcheckWin(3, 4, 5);
-            mcheckWin(0, 3, 6);
-            mcheckWin(6, 7, 8);
-            if (
-                box1[0].innerText != "" &&
-                box1[1].innerText != "" &&
-                box1[2].innerText != "" &&
-                box1[3].innerText != "" &&
-                box1[4].innerText != "" &&
-                box1[5].innerText != "" &&
-                box1[6].innerText != "" &&
-                box1[7].innerText != "" &&
-                box1[8].innerText != ""
-            ) {
-                retry();
-            }
-        }
-
-        function retry() {
-            tr.style.color = "black";
-            tr.style.backgroundColor = "white"; //for background-color write in camel case without'-'
-            tr.style.border = "black 3px solid";
-        }
-
-        function resetValues() {
-            bWin = false;
-            pWin = false;
-            msg.textContent = "";
-
-            for (i = 0; i < box1.length; i++) {
-                box1[i].innerText = "";
-            }
-            tr.style.color = "transparent";
-            tr.style.backgroundColor = "transparent";
-            tr.style.border = "transparent";
-        }
-
-        function subValue(i, j, k) {
-            if (req == true) {
-                if (box1[4].innerText == "") {
-                    box1[4].innerText = "O";
-                    req = false;
-                }
-            }
-
-            if (req == true) {
-                if (box1[i].innerText == "O" && box1[j].innerText == "O") {
-                    if (box1[k].innerText == "") {
-                        box1[k].innerText = "O";
-                        req = false;
-                    }
-                }
-            }
-
-            if (req == true) {
-                if (box1[j].innerText == "O" && box1[k].innerText == "O") {
-                    if (box1[i].innerText == "") {
-                        box1[i].innerText = "O";
-                        req = false;
-                    }
-                }
-            }
-
-            if (req == true) {
-                if (box1[i].innerText == "O" && box1[k].innerText == "O") {
-                    if (box1[j].innerText == "") {
-                        box1[j].innerText = "O";
-                        req = false;
-                    }
-                }
-            }
-        }
-
-        function mainValue() {
-            subValue(0, 4, 8);
-            subValue(1, 4, 7);
-            subValue(0, 1, 2);
-            subValue(2, 4, 6);
-            subValue(3, 4, 5);
-            subValue(0, 3, 6);
-            subValue(6, 7, 8);
-            subValue(2, 5, 8);
-            xValue(0, 4, 8);
-            xValue(1, 4, 7);
-            xValue(0, 1, 2);
-            xValue(2, 4, 6);
-            xValue(3, 4, 5);
-            xValue(0, 3, 6);
-            xValue(6, 7, 8);
-            xValue(2, 5, 8);
-
-            subValue(2, 5, 8);
-            if (req === true) {
-                a = Math.floor(Math.random() * 9);
-                {
-                    if (box[a].innerText == "") {
-                        console.log(
-                            "inside bot value if condition for random" +
-                            "valueof box[" +
-                            a +
-                            "] is O"
-                        );
-                        box[a].innerText = "O";
-                        checkWin();
-                    } else botValue();
-                }
-            }
-        }
-
-        function xValue(i, j, k) {
-            if (req == true) {
-                if (box[i].innerText == "X" && box[j].innerText == "X") {
-                    if (box[k].innerText == "") {
-                        box[k].innerText = "O";
-                        req = false;
-                    }
-                }
-            }
-            if (req == true) {
-                if (box[j].innerText == "X" && box[k].innerText == "X") {
-                    if (box[i].innerText == "") {
-                        box[i].innerText = "O";
-                        req = false;
-                    }
-                }
-            }
-            if (req == true) {
-                if (box[i].innerText == "X" && box[k].innerText == "X") {
-                    if (box[j].innerText == "") {
-                        box[j].innerText = "O";
-                        req = false;
-                    }
-                }
-            }
-        }
-    </script>
-
     <script src="/socket.io/socket.io.js"></script>
     <script>
         function playWithFriends() {
             document.getElementById("container").innerHTML = `
             <div class="gameBoard">
-            <h1>Tic Tac Toe</h1>
-            <div class="row">
-                <button id="box-0" class="boardBox" onclick="clik(0)"></button>
-                <button id="box-1" class="boardBox" onclick="clik(1)"></button>
-                <button id="box-2" class="boardBox" onclick="clik(2)"></button>
-            </div>
-            <div class="row">
-                <button id="box-3" class="boardBox" onclick="clik(3)"></button>
-                <button id="box-4" class="boardBox" onclick="clik(4)"></button>
-                <button id="box-5" class="boardBox" onclick="clik(5)"></button>
-            </div>
-            <div class="row">
-                <button id="box-6" class="boardBox" onclick="clik(6)"></button>
-                <button id="box-7" class="boardBox" onclick="clik(7)"></button>
-                <button id="box-8" class="boardBox" onclick="clik(8)"></button>
-            </div>
-        </div>`
-            const socket = io();
-            socket.emit("connection");
-            console.log('Connected to server. Socket ID:', socket.id);
-            socket.emit("authenticate", { userID: "<%= username %>" });
+                <h1>Tic Tac Toe</h1>
+                <div class="row">
+                    <button id="box-0" class="boardBox" onclick="clik(0)"></button>
+                    <button id="box-1" class="boardBox" onclick="clik(1)"></button>
+                    <button id="box-2" class="boardBox" onclick="clik(2)"></button>
+                </div>
+                <div class="row">
+                    <button id="box-3" class="boardBox" onclick="clik(3)"></button>
+                    <button id="box-4" class="boardBox" onclick="clik(4)"></button>
+                    <button id="box-5" class="boardBox" onclick="clik(5)"></button>
+                </div>
+                <sdiv class="row">
+                    <button id="box-6" class="boardBox" onclick="clik(6)"></button>
+                    <button id="box-7" class="boardBox" onclick="clik(7)"></button>
+                    <button id="box-8" class="boardBox" onclick="clik(8)"></button>
+                </div>
+            </div>`
+        }
+        const socket = io();
+        socket.emit("connection");
+        socket.emit("authenticate", { userID: "<%= username %>" });
 
-            a = document.getElementById("box-0");
-            b = document.getElementById("box-1");
-            c = document.getElementById("box-2");
-            d = document.getElementById("box-3");
-            e = document.getElementById("box-4");
-            f = document.getElementById("box-5");
-            g = document.getElementById("box-6");
-            h = document.getElementById("box-7");
-            i = document.getElementById("box-8");
+        a = document.getElementById("box-0");
+        b = document.getElementById("box-1");
+        c = document.getElementById("box-2");
+        d = document.getElementById("box-3");
+        e = document.getElementById("box-4");
+        f = document.getElementById("box-5");
+        g = document.getElementById("box-6");
+        h = document.getElementById("box-7");
+        i = document.getElementById("box-8");
 
-            let box = [a, b, c, d, e, f, g, h, i];
-            p1Win = false;
-            p2Win = false;
-            cliked = false;
-            toss = 'X';
-            attempt = 0;
-            scoreP1 = 0;
-            scoreP2 = 0;
-            let players;
+        let box = [a, b, c, d, e, f, g, h, i];
+        p1Win = false;
+        p2Win = false;
+        cliked = false;
+        toss = 'X';
+        attempt = 0;
+        scoreP1 = 0;
+        scoreP2 = 0;
+        let players;
 
-            const player2 = document.getElementById("p2");
-            const attempts = document.getElementById("attempts");
-            const result = document.getElementById("result");
-            const score_1 = document.getElementById("score-1");
-            const score_2 = document.getElementById("score-2");
+        const player2 = document.getElementById("p2");
+        const attempts = document.getElementById("attempts");
+        const result = document.getElementById("result");
+        const score_1 = document.getElementById("score-1");
+        const score_2 = document.getElementById("score-2");
 
-            function clik(x) {
-                if (p1Win == false && p2Win == false && cliked == false) {
-                    console.log("inside clik()");
-                    if (box[x].innerText == "") {
-                        box[x].innerText = toss;
-                        cliked = true;
-                        winCheck();
-                        const message = x;
-                        socket.emit('send_message', { senderID: "<%= username %>", recipientID: players, content1: message, content2: toss });
-                    }
-                }
-            }
 
-            // Receive messages from the server
-            socket.on('new_message', (data) => {
-                const { senderID, content1, content2 } = data;
-                console.log(`New message from ${senderID}: ${content1} :${content2}`);
-                if (box[content1].innerText == "") {
-                    box[content1].innerText = content2;
-                    cliked = false;
+        function clik(x) {
+            if (p1Win == false && p2Win == false && cliked == false) {
+                console.log("inside clik()");
+                if (box[x].innerText == "") {
+                    box[x].innerText = toss;
+                    cliked = true;
                     winCheck();
-                }
-                if (content2 == 'X') {
-                    toss = 'O'
-                } else {
-                    toss = 'X'
-                }
-            });
-
-            function checkWin(x, y, z) {
-                if (box[x].innerText == "X" && box[y].innerText == "X" && box[z].innerText == "X") {
-                    //checks left to right diag line for player
-                    console.log("You WIN");
-                    pWin = true;
-                    result.innerText = "X Wins";
-                    // score_1.innerText = ++scoreP1;
-                    attempt++;
-                    attempts.innerText = attempt;
-
-                } else if (box[x].innerText == "O" && box[y].innerText == "O" && box[z].innerText == "O") {
-                    //checks left to right diag line for bot
-                    bWin = true;
-                    result.innerText = "O Wins";
-                    attempt++;
-                    attempts.innerText = attempt;
+                    const message = x;
+                    socket.emit('send_message', { senderID: "<%= username %>", recipientID: players, content1: message, content2: toss });
                 }
             }
+        }
 
-            function winCheck() {
-                checkWin(0, 4, 8);
-                checkWin(1, 4, 7);
-                checkWin(0, 1, 2);
-                checkWin(2, 4, 6);
-                checkWin(2, 5, 8);
-                checkWin(3, 4, 5);
-                checkWin(0, 3, 6);
-                checkWin(6, 7, 8);
+        // Receive messages from the server
+        socket.on('new_message', (data) => {
+            const { senderID, content1, content2 } = data;
+            console.log(`New message from ${senderID}: ${content1} :${content2}`);
+            if (box[content1].innerText == "") {
+                box[content1].innerText = content2;
+                cliked = false;
+                winCheck();
             }
+            if (content2 == 'X') {
+                toss = 'O'
+            } else {
+                toss = 'X'
+            }
+        });
+
+        function checkWin(x, y, z) {
+            if (box[x].innerText == "X" && box[y].innerText == "X" && box[z].innerText == "X") {
+                //checks left to right diag line for player
+                console.log("You WIN");
+                pWin = true;
+                result.innerText = "X Wins";
+                // score_1.innerText = ++scoreP1;
+                attempt++;
+                attempts.innerText = attempt;
+
+            } else if (box[x].innerText == "O" && box[y].innerText == "O" && box[z].innerText == "O") {
+                //checks left to right diag line for bot
+                bWin = true;
+                result.innerText = "O Wins";
+                attempt++;
+                attempts.innerText = attempt;
+            }
+        }
+
+        function winCheck() {
+            checkWin(0, 4, 8);
+            checkWin(1, 4, 7);
+            checkWin(0, 1, 2);
+            checkWin(2, 4, 6);
+            checkWin(2, 5, 8);
+            checkWin(3, 4, 5);
+            checkWin(0, 3, 6);
+            checkWin(6, 7, 8);
         }
     </script>
 </body>
